訊息紐和header,Fix的區域

--- a/5x_index.html
+++ b/5x_index.html
@@ -9,6 +9,22 @@
   <link rel="stylesheet" href="5xhomework.css">
 </head>
 <body>
+  <div class="message">
+    <a href="message" target="_blank"><img src="links/00messenge.png" alt="發送訊息"></a>
+  </div>
+  <div class="header">
+    <a href="https://5xruby.tw/" class="logo">
+      <div><img src="links/00icon-logo.png" alt="五倍紅寶石"></div>
+      <div><p>五倍紅寶石</p></div>
+    </a>
+    <nav>
+      <a href="a">ASTRO Camp</a>
+      <a href="a">線上課程</a>
+      <a href="a">短期課程</a>
+      <a href="a">技術文章</a>
+      <a href="a">五倍消息</a>
+    </nav>
+  </div>
   
 </body>
 </html>
