--- a/5x_index.html
+++ b/5x_index.html
@@ -25,6 +25,7 @@
       <a href="a">五倍消息</a>
     </nav>
   </div>
-  
+  <div class="banner"><img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券"></div>
+
 </body>
 </html>
