--- a/5x_index.html
+++ b/5x_index.html
@@ -18,11 +18,26 @@
       <div><p>五倍紅寶石</p></div>
     </a>
     <nav>
-      <a href="a">ASTRO Camp</a>
-      <a href="a">線上課程</a>
-      <a href="a">短期課程</a>
-      <a href="a">技術文章</a>
-      <a href="a">五倍消息</a>
+      <a href="a" target="_blank">
+        <p>ASTRO Camp</p>
+        <div class="nav_color"></div>
+      </a>
+      <a href="a" target="_blank">
+        <p>線上課程</p>
+        <div class="nav_color"></div>
+      </a>
+      <a href="a" target="_blank">
+        <p>短期課程</p>
+        <div class="nav_color"></div>
+      </a>
+      <a href="a" target="_blank">
+        <p>技術文章</p>
+        <div class="nav_color"></div>
+      </a>
+      <a href="a" target="_blank">
+        <p>五倍消息</p>
+        <div class="nav_color"></div>
+      </a>
     </nav>
   </div>
   <div class="banner"><img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券"></div>
