調整尺寸，之前比例看錯了

--- a/5x_index.html
+++ b/5x_index.html
@@ -15,7 +15,7 @@
   <div class="header">
     <a href="https://5xruby.tw/" class="logo">
       <div><img src="links/00icon-logo.png" alt="五倍紅寶石"></div>
-      <div><p>五倍紅寶石</p></div>
+      <div><p>五倍紅寶石・專業程式教育機構</p></div>
     </a>
     <nav>
       <a href="a" target="_blank">
