--- a/5x_index.html
+++ b/5x_index.html
@@ -42,5 +42,12 @@
   </div>
   <div class="banner"><img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券"></div>
 
+
+
+
+  <!-- 以下是頁尾 -->
+  <div class="footer">
+    © 2014 - 2021 五倍紅寶石程式資訊教育股份有限公司 (5xRuby Training Group CO., LTD) | 台北市短期補習班立案 第 7594 號
+  </div>
 </body>
 </html>
