--- a/5x_index.html
+++ b/5x_index.html
@@ -40,8 +40,16 @@
       </a>
     </nav>
   </div>
-  <div class="banner"><img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券"></div>
-
+  <div class="banner">
+    <img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券">
+  </div>
+  <div class="slogan">
+    <h2>不只停留在教你釣魚，更引領你乘風破浪</h2>
+    <div>
+      <div class="slogan_color"></div>
+    </div>
+    <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
+  </div>
 
 
 
