--- a/5x_index.html
+++ b/5x_index.html
@@ -50,6 +50,23 @@
     </div>
     <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
   </div>
+  <div class="threepoints">
+    <div class="threepoints_block">
+      <img src="links/02a-learning.png" alt="鍛鍊實力，主導學習">
+      <h3>鍛鍊實力，主導學習</h3>
+      <p>搭配最新技術版本，掌握業界脈動，<br>與需求緊密結合，鍛鍊程式實力。</p>
+    </div>
+    <div class="threepoints_block">
+      <img src="links/02b-plan-.png" alt="完整規劃，絕不漏接">
+      <h3>完整規劃，絕不漏接</h3>
+      <p>線上補課、線下討論與社群活動，<br>確保學員擁有充份且多元的學習資源和支持系統。</p>
+    </div>
+    <div class="threepoints_block">
+      <img src="links/02c-challenge.png" alt="挑戰困境，突破職涯">
+      <h3>挑戰困境，突破職涯</h3>
+      <p>無論新手跨領域轉職，或在職工程師深度進修，<br>讓五倍為你解構學習，突破困境。</p>
+    </div>
+  </div>
 
 
 
