--- a/5x_index.html
+++ b/5x_index.html
@@ -67,7 +67,136 @@
       <p>無論新手跨領域轉職，或在職工程師深度進修，<br>讓五倍為你解構學習，突破困境。</p>
     </div>
   </div>
+  <div class="teacher">
+    <div class="teacher_slogan">
+      <h2>講師陣容</h2>
+      <div class="teacher_slogan_color"></div>
+      <p>我們的講師長期專注於網站開發技術領域，透過研討會、社群演講及授課方式將技術知識分享給更多人知道，讓更多人了解各個技術的美好之處。</p>
+    </div>
+    <div class="teacher_member">
+      <div class="teacher_member_each">
+        <div class="member_info">
+          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <div class="member_info_name">
+            <p>HTML / CSS 講師</p>
+            <div class="member_info_color"></div>
+            <h4>李建杭 (Amos Lee)</h4>
+            <div class="member_contact">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+            </div>
+          </div>
+        </div>
+        <div class="member_line"></div>
+        <div class="member_introduce">
+          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
+          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
+          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
+        </div>
+        <div class="member_line2">
+          <p>講師其他課程</p>
+          <div></div>
+        </div>
+        <div class="member_course">
+          <a href="mmm">網頁前端設計女性專班</a>
+          <a href="mmm">HTML 網頁設計新手村</a>
+        </div>
+        
+      </div>
+      <div class="teacher_member_each">
+        <div class="member_info">
+          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <div class="member_info_name">
+            <p>HTML/CSS講師</p>
+            <div class="member_info_color"></div>
+            <h4>李建杭 (Amos Lee)</h4>
+            <div class="member_contact">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+            </div>
+          </div>
+        </div>
+        <div class="member_line"></div>
+        <div class="member_introduce">
+          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
+          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
+          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
+        </div>
+        <div class="member_line2">
+          <p>講師其他課程</p>
+          <div></div>
+        </div>
+        <div class="member_course">
+          <a href="mmm">網頁前端設計女性專班</a>
+          <a href="mmm">HTML 網頁設計新手村</a>
+        </div>  
+      </div>
+      <div class="teacher_member_each">
+        <div class="member_info">
+          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <div class="member_info_name">
+            <p>HTML&nbsp;/&nbsp;CSS&nbsp;講師</p>
+            <div class="member_info_color"></div>
+            <h4>李建杭 (Amos Lee)</h4>
+            <div class="member_contact">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+            </div>
+          </div>
+        </div>
+        <div class="member_line"></div>
+        <div class="member_introduce">
+          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
+          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
+          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
+        </div>
+        <div class="member_line2">
+          <p>講師其他課程</p>
+          <div></div>
+        </div>
+        <div class="member_course">
+          <a href="mmm">網頁前端設計女性專班</a>
+          <a href="mmm">HTML 網頁設計新手村</a>
+        </div>  
+      </div>
+      <div class="teacher_member_each">
+        <div class="member_info">
+          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <div class="member_info_name">
+            <p>HTML/CSS講師</p>
+            <div class="member_info_color"></div>
+            <h4>李建杭 (Amos Lee)</h4>
+            <div class="member_contact">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+              <img src="links/03icon_web.png" alt="網頁">
+            </div>
+          </div>
+        </div>
+        <div class="member_line"></div>
+        <div class="member_introduce">
+          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
+          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
+          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
+        </div>
+        <div class="member_line2">
+          <p>講師其他課程</p>
+          <div></div>
+        </div>
+        <div class="member_course">
+          <a href="mmm">網頁前端設計女性專班</a>
+          <a href="mmm">HTML 網頁設計新手村</a>
+        </div>  
+      </div>
 
+
+
+    </div>
+
+  </div>
 
 
   <!-- 以下是頁尾 -->
