--- a/5x_index.html
+++ b/5x_index.html
@@ -82,116 +82,117 @@
             <div class="member_info_color"></div>
             <h4>李建杭 (Amos Lee)</h4>
             <div class="member_contact">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
+              <a href="web" target="_blank"><img src="links/03icon_web.png" alt="Website"></a>
+              <a href="FB" target="_blank"><img src="links/03icon_FB.png" alt="Facebook"></a>
+              <a href="YT" target="_blank"><img src="links/03icon_youtube.png" alt="Youtube"></a>
             </div>
           </div>
         </div>
         <div class="member_line"></div>
         <div class="member_introduce">
-          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
-          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
-          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
+          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔<span>HTML & CSS、Bootstrap、RWD、CSS3</span> 等，為國內知名前端技術講師。</p>
+          <p>2018 年成為 <a href="https://www.youtube.com/channel/UCQfjTYYrqxPg5LJmDBUesbQ" target="_blank">Youtuber</a>，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
+          <p><a href="https://ithelp.ithome.com.tw/users/20112550/ironman/2072" target="_blank">iT 邦幫忙鐵人賽</a>連續<span>三屆冠軍</span>、連續<span>兩屆優選</span>，於 2020 出版「<a href="https://www.books.com.tw/products/0010863222" target="_blank">都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）</a>」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
         </div>
         <div class="member_line2">
           <p>講師其他課程</p>
           <div></div>
         </div>
         <div class="member_course">
-          <a href="mmm">網頁前端設計女性專班</a>
-          <a href="mmm">HTML 網頁設計新手村</a>
+          <a href="mmm" target="_blank">網頁前端設計女性專班</a>
+          <a href="mmm" target="_blank">HTML 網頁設計新手村</a>
         </div>
-        
       </div>
       <div class="teacher_member_each">
         <div class="member_info">
-          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <img src="links/003B.jpg" alt="Eddie Kao" class="member_pic">
           <div class="member_info_name">
-            <p>HTML/CSS講師</p>
+            <p>Ruby / Git 講師</p>
             <div class="member_info_color"></div>
-            <h4>李建杭 (Amos Lee)</h4>
+            <h4>高見龍 (Eddie Kao)</h4>
             <div class="member_contact">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
+              <a href="web" target="_blank"><img src="links/03icon_web.png" alt="Website"></a>
+              <a href="FB" target="_blank"><img src="links/03icon_FB.png" alt="Facebook"></a>
+              <a href="twitter" target="_blank"><img src="links/03icon_twitter.png" alt="twitter"></a>
+              <a href="GitHub" target="_blank"><img src="links/03icon_GitHub.png" alt="GitHub"></a>
+              <a href="YT" target="_blank"><img src="links/03icon_youtube.png"alt="twitter"></a>
             </div>
           </div>
         </div>
         <div class="member_line"></div>
         <div class="member_introduce">
-          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
-          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
-          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
-        </div>
+          <p>五倍紅寶石程式資訊教育股份有限公司負責人，在國內外各大型技術研討會擔任講者，參與過日本 RubyKaigi、日本 Ruby World Conference、臺灣微軟 Azure Developer Day 、RubyConf Taiwan、JSDC、WebConf 等。有二十年程式開發經驗和十多年的教學經驗，在臺灣推廣 Ruby 及 Git 多年，在各大專院校與企業開課，深受學員喜愛。
+          <p>雖非資訊本科系出身，但喜歡寫程式，而且希望可以寫一輩子程式的電腦阿宅。</p>
+          <p>著有「<a href="https://gitbook.tw/" target="_blank">為你自己學 Git」</a>與「<a href="https://railsbook.tw/" target="_blank">為你自己學 Ruby on Rails</a>」暢銷技術書。</p>
+        </div> 
         <div class="member_line2">
           <p>講師其他課程</p>
           <div></div>
         </div>
         <div class="member_course">
-          <a href="mmm">網頁前端設計女性專班</a>
-          <a href="mmm">HTML 網頁設計新手村</a>
-        </div>  
+          <a href="mmm" target="_blank">Ruby on Rails 實戰課程</a>
+          <a href="mmm" target="_blank">坐上 Git 時光機 - 版本控制</a>
+        </div>
       </div>
       <div class="teacher_member_each">
         <div class="member_info">
-          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <img src="links/003C.jpg" alt="Kuro Hsu" class="member_pic">
           <div class="member_info_name">
-            <p>HTML&nbsp;/&nbsp;CSS&nbsp;講師</p>
+            <p>Vue / JavaScript 講師</p>
             <div class="member_info_color"></div>
-            <h4>李建杭 (Amos Lee)</h4>
+            <h4>許國政 (Kuro Hsu)</h4>
             <div class="member_contact">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
+              <a href="web" target="_blank"><img src="links/03icon_web.png" alt="Website"></a>
+              <a href="FB" target="_blank"><img src="links/03icon_FB.png" alt="Facebook"></a>
+              <a href="twitter" target="_blank"><img src="links/03icon_twitter.png" alt="twitter"></a>
+              <a href="GitHub" target="_blank"><img src="links/03icon_GitHub.png" alt="GitHub"></a>
             </div>
           </div>
         </div>
         <div class="member_line"></div>
         <div class="member_introduce">
-          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
-          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
-          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
-        </div>
+          <p>業界<span>資深前端開發者</span>，為臺灣各大型技術研討會 JSDC、WebConf、MOPCON、COSCUP 的知名講者。</p>
+          <p>於 2019 年出版「<a href="https://www.books.com.tw/products/0010832387" target="_blank">0 陷阱！0 誤解！8 天重新認識 JavaScript！</a>」，攻佔各大技術書籍排行榜。</p>
+          <p>同時身兼 <span>Vue.js Taiwan </span>社群主辦人，主辦的活動場場秒殺一票難求，衍伸開發的週邊商品精緻實用，譽為被程式耽誤的週邊商品業者。</p>
+        </div> 
         <div class="member_line2">
           <p>講師其他課程</p>
           <div></div>
         </div>
         <div class="member_course">
-          <a href="mmm">網頁前端設計女性專班</a>
-          <a href="mmm">HTML 網頁設計新手村</a>
-        </div>  
+          <a href="mmm" target="_blank">Vue.js 與 Vuex 前端開發實戰
+          </a>
+          <a href="mmm" target="_blank">JavaScript / jQuery 前端開發入門實戰</a>
+        </div>
       </div>
       <div class="teacher_member_each">
         <div class="member_info">
-          <img src="links/003A.png" alt="Amos Lee" class="member_pic">
+          <img src="links/003D.jpg" alt="奶綠茶" class="member_pic">
           <div class="member_info_name">
-            <p>HTML/CSS講師</p>
+            <p>React 講師</p>
             <div class="member_info_color"></div>
-            <h4>李建杭 (Amos Lee)</h4>
+            <h4>廖珀均 (奶綠茶)</h4>
             <div class="member_contact">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
-              <img src="links/03icon_web.png" alt="網頁">
+              <a href="web" target="_blank"><img src="links/03icon_web.png" alt="Website"></a>
+              <a href="FB" target="_blank"><img src="links/03icon_FB.png" alt="Facebook"></a>
+              <a href="GitHub" target="_blank"><img src="links/03icon_GitHub.png" alt="GitHub"></a>
             </div>
           </div>
         </div>
         <div class="member_line"></div>
         <div class="member_introduce">
-          <p>從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔 HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。</p>
-          <p>2018 年成為 Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。</p>
-          <p>iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020 出版「都能懂的 CSS 選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。</p>
-        </div>
+          <p>資深<span>前端開發者</span>>與程式開發講師，授課資歷十年以上。</p>
+          <p>擅長 HTML、CSS、JavaScript、jQuery、Vue、React 開發應用與 Webpack 前端打包工具等，專修各種前端跨平台的疑難雜症。</p>
+          <p>另一個身份為花鬍子樂團吉他手，育有二貓，喜愛小酌。</p>
+        </div> 
         <div class="member_line2">
           <p>講師其他課程</p>
           <div></div>
         </div>
         <div class="member_course">
-          <a href="mmm">網頁前端設計女性專班</a>
-          <a href="mmm">HTML 網頁設計新手村</a>
-        </div>  
+          <a href="mmm" target="_blank">React 全攻略入門班</a>
+        </div>
       </div>
-
 
 
     </div>
