--- a/5x_index.html
+++ b/5x_index.html
@@ -193,10 +193,43 @@
           <a href="mmm" target="_blank">React 全攻略入門班</a>
         </div>
       </div>
-
-
     </div>
-
+  </div>
+  <div class="media">
+    <div class="media_tittle">
+      <h2>媒體報導</h2>
+      <div class="media_tittle_color"></div>
+    </div>
+    <div class="media_reports">
+      <div class="media_reports_news">
+        <a href="news" target="_blank">想當高薪工程師 備妥三大關鍵能力求職更順暢</a>
+        <p>中時新聞網・2021/01</p>
+      </div>
+      <div class="media_reports_news">
+        <a href="news" target="_blank">營養系畢業、他撥接上網學程式，教人轉職工程師成功率達八成！</a>
+        <p>EnglishOK・2020/03</p>
+      </div>
+      <div class="media_reports_news">
+        <a href="news" target="_blank">教出八成轉職就業率、技術書籍狂賣15刷，程式教學大神竟是營養系出身！</a>
+        <p>天下雜誌・2020/02</p>
+      </div>
+      <div class="media_reports_news">
+        <a href="news" target="_blank">從調酒師到工程師！她靠中英文線上課程自學一年，成功轉職</a>
+        <p>天下雜誌・2020/01</p>
+      </div>
+      <div class="media_reports_news">
+        <a href="news" target="_blank">勇往「職」前！五倍紅寶石的 ASTRO Camp 舉辦第一屆 Demo Day
+        </a>
+        <p>INSIDE・2019/07</p>
+      </div>
+      <div class="media_reports_news">
+        <a href="news" target="_blank">無痛轉職都是騙人的！「微痛」學習法教你跨領域轉職工程師</a>
+        <p>INSIDE・2019/01</p>
+      </div>
+    </div>
+    <div class="media_more">
+      <a href="more">更多報導</a>
+    </div>
   </div>
 
 
