--- a/5x_index.html
+++ b/5x_index.html
@@ -7,6 +7,7 @@
   <title>五倍紅寶石・專業程式教育 | 實戰轉職・企業內訓．人才媒合</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="5xhomework.css">
+  <link rel="stylesheet" href="course.css">
 </head>
 <body>
   <div class="message">
@@ -231,7 +232,32 @@
       <a href="more">更多報導</a>
     </div>
   </div>
+  <div class="course">
+    <div class="course_short">
+      <div class="course_slogan">
+        <h4>短期實體課程</h4>
+        <div class="course_slogan_color"></div>
+        <p>目標清晰的短期課程，針對單一技術所開設。適合在職進修的工程師、PM，或對網頁設計有興趣的你。</p>
+      </div>
+      <div class="course_goto">
+        <div class="course_goto_dot">
+          <div class="course_dot"></div>
+          <div class="course_dot"></div>
+          <div class="course_dot"></div>
+        </div>
+          <div class="course_goto_page">
+            <h4>後端課程</h4>
+            <p>專屬五倍的後端課程 Ruby on Rails，一起踏入後端領域吧!</p>
+            <a href="goto">前往課程 ></a>
+          </div>
+      </div>
+    </div>
+    <div class="course_recently"></div>
 
+    <div class="course_more">
+      <a href="more">看更多課程</a>
+    </div>
+  </div>
 
   <!-- 以下是頁尾 -->
   <div class="footer">
