--- a/5x_index.html
+++ b/5x_index.html
@@ -69,9 +69,9 @@
     </div>
   </div>
   <div class="teacher">
-    <div class="teacher_slogan">
+    <div class="teacher_introduce">
       <h2>講師陣容</h2>
-      <div class="teacher_slogan_color"></div>
+      <div class="teacher_introduce_color"></div>
       <p>我們的講師長期專注於網站開發技術領域，透過研討會、社群演講及授課方式將技術知識分享給更多人知道，讓更多人了解各個技術的美好之處。</p>
     </div>
     <div class="teacher_member">
@@ -234,9 +234,9 @@
   </div>
   <div class="course">
     <div class="course_short">
-      <div class="course_slogan">
+      <div class="course_introduce">
         <h4>短期實體課程</h4>
-        <div class="course_slogan_color"></div>
+        <div class="course_introduce_color"></div>
         <p>目標清晰的短期課程，針對單一技術所開設。適合在職進修的工程師、PM，或對網頁設計有興趣的你。</p>
       </div>
       <div class="course_goto">
@@ -247,8 +247,11 @@
         </div>
           <div class="course_goto_page">
             <h4>後端課程</h4>
-            <p>專屬五倍的後端課程 Ruby on Rails，一起踏入後端領域吧!</p>
-            <a href="goto">前往課程 ></a>
+            <p class="course_goto_p">專屬五倍的後端課程 Ruby on Rails，一起踏入後端領域吧!</p>
+            <a href="goto">
+              <p>前往課程</p>
+              <p>＞</p>
+            </a>
           </div>
       </div>
     </div>
