修改小錯誤以及統一標題紅線body_title

--- a/5x_index.html
+++ b/5x_index.html
@@ -44,10 +44,10 @@
   <div class="banner">
     <img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券">
   </div>
-  <div class="slogan">
-    <h2>不只停留在教你釣魚，更引領你乘風破浪</h2>
+  <div class="body_tittle">
+    <h2 cla>不只停留在教你釣魚，更引領你乘風破浪</h2>
     <div>
-      <div class="slogan_color"></div>
+      <div class="body_tittle_color"></div>
     </div>
     <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
   </div>
@@ -182,7 +182,7 @@
         </div>
         <div class="member_line"></div>
         <div class="member_introduce">
-          <p>資深<span>前端開發者</span>>與程式開發講師，授課資歷十年以上。</p>
+          <p>資深<span>前端開發者</span>與程式開發講師，授課資歷十年以上。</p>
           <p>擅長 HTML、CSS、JavaScript、jQuery、Vue、React 開發應用與 Webpack 前端打包工具等，專修各種前端跨平台的疑難雜症。</p>
           <p>另一個身份為花鬍子樂團吉他手，育有二貓，喜愛小酌。</p>
         </div> 
@@ -197,9 +197,9 @@
     </div>
   </div>
   <div class="media">
-    <div class="media_tittle">
+    <div class="body_tittle">
       <h2>媒體報導</h2>
-      <div class="media_tittle_color"></div>
+      <div class="body_tittle_color"></div>
     </div>
     <div class="media_reports">
       <div class="media_reports_news">
@@ -347,7 +347,18 @@
       </a>
     </div>
   </div>
-
+  <div class="recommand">
+    <div class="body_tittle">
+      <h2>在五倍，我們一起超越五倍</h2>
+      <div class="body_tittle_color"></div>
+    </div>
+  </div>
+  <div class="article">
+    <div class="body_tittle">
+      <h2>精選文章</h2>
+      <div class="body_tittle_color"></div>
+    </div>
+  </div>
   <!-- 以下是頁尾 -->
   <div class="footer">
     © 2014 - 2021 五倍紅寶石程式資訊教育股份有限公司 (5xRuby Training Group CO., LTD) | 台北市短期補習班立案 第 7594 號
