--- a/5x_index.html
+++ b/5x_index.html
@@ -44,10 +44,10 @@
   <div class="banner">
     <img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券">
   </div>
-  <div class="body_tittle">
+  <div class="main_tittle">
     <h2 cla>不只停留在教你釣魚，更引領你乘風破浪</h2>
     <div>
-      <div class="body_tittle_color"></div>
+      <div class="main_tittle_color"></div>
     </div>
     <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
   </div>
@@ -197,9 +197,9 @@
     </div>
   </div>
   <div class="media">
-    <div class="body_tittle">
+    <div class="main_tittle">
       <h2>媒體報導</h2>
-      <div class="body_tittle_color"></div>
+      <div class="main_tittle_color"></div>
     </div>
     <div class="media_reports">
       <div class="media_reports_news">
@@ -228,7 +228,7 @@
         <p>INSIDE・2019/01</p>
       </div>
     </div>
-    <div class="media_more">
+    <div class="main_morelink">
       <a href="more">更多報導</a>
     </div>
   </div>
@@ -310,7 +310,7 @@
         </a>
       </div>
     </div>
-    <div class="course_more">
+    <div class="main_morelink">
       <a href="more">看更多課程</a>
     </div>
   </div>
@@ -348,15 +348,36 @@
     </div>
   </div>
   <div class="recommand">
-    <div class="body_tittle">
+    <div class="main_tittle">
       <h2>在五倍，我們一起超越五倍</h2>
-      <div class="body_tittle_color"></div>
+      <div class="main_tittle_color"></div>
+    </div>
+    <div class="recommand_member">
+      <div class="recommand_member_each">
+        <p class="recommand_member_p">轉職工程師首選五倍紅寶石！在這裡學到的不只有 Ruby on Rails，更多時候是在訓練釐清問題以及培養邏輯思考的能力，想要有收穫？開始 coding 吧！</p>
+        <div class="recommand_student">
+          <img src="links/06a.jpg" alt="王安卓">
+          <p>王安卓</p>
+        </div>
+      </div>
+      <div class="recommand_member_each">
+        <p class="recommand_member_p">選擇程式語言很重要，但選擇優秀的導師更重要！能跟擁有多年 Ruby/Rails 實戰經驗、活躍於社群的頂尖 Rubyist 學習，這個機會真的是超級難得，不管是師資、環境、支援的部分都是一等一的。</p>
+        <div class="recommand_student">
+          <img src="links/06b.jpg" alt="方紹軒">
+          <p>方紹軒</p>
+        </div>
+      </div>
+      
     </div>
   </div>
   <div class="article">
-    <div class="body_tittle">
+    <div class="main_tittle">
       <h2>精選文章</h2>
-      <div class="body_tittle_color"></div>
+      <div class="main_tittle_color"></div>
+    </div>
+
+    <div class="main_morelink">
+      <a href="more">更多文章</a>
     </div>
   </div>
   <!-- 以下是頁尾 -->
