--- a/5x_index.html
+++ b/5x_index.html
@@ -353,23 +353,42 @@
       <div class="main_tittle_color"></div>
     </div>
     <div class="recommand_member">
-      <div class="recommand_member_each">
+      <div class="recommand_member_item">
         <p class="recommand_member_p">轉職工程師首選五倍紅寶石！在這裡學到的不只有 Ruby on Rails，更多時候是在訓練釐清問題以及培養邏輯思考的能力，想要有收穫？開始 coding 吧！</p>
         <div class="recommand_student">
           <img src="links/06a.jpg" alt="王安卓">
           <p>王安卓</p>
         </div>
       </div>
-      <div class="recommand_member_each">
+      <div class="recommand_member_item">
         <p class="recommand_member_p">選擇程式語言很重要，但選擇優秀的導師更重要！能跟擁有多年 Ruby/Rails 實戰經驗、活躍於社群的頂尖 Rubyist 學習，這個機會真的是超級難得，不管是師資、環境、支援的部分都是一等一的。</p>
         <div class="recommand_student">
           <img src="links/06b.jpg" alt="方紹軒">
           <p>方紹軒</p>
         </div>
       </div>
-      
+    </div>
+    <div class="recommend_dot">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </div>
+
   <div class="article">
     <div class="main_tittle">
       <h2>精選文章</h2>
