精選文章Article區域HTML/CSS完成

--- a/5x_index.html
+++ b/5x_index.html
@@ -394,7 +394,29 @@
       <h2>精選文章</h2>
       <div class="main_tittle_color"></div>
     </div>
-
+    <div class="article_body">
+      <div class="article_body_item">
+        <a href="a">
+          <div><img src="links/07A.jpeg" alt="免費資源 TOP 5"></div>
+          <h5>自學 Ruby on Rails 推薦的免費資源 TOP 5</h5>
+        </a>
+        <p>By Robert・10月 15 2021・技術文章</p>
+      </div>
+      <div class="article_body_item">
+        <a href="a">
+          <div><img src="links/07B.jpg" alt="快速生成 HTML"></div>
+          <h5>快速生成 HTML！Emmet 語法大公開！</h5>
+        </a>
+        <p>By Debby・9月 24 2021・技術文章</p>
+      </div>
+      <div class="article_body_item">
+        <a href="a">
+          <div><img src="links/07C.png" alt="資料查找"></div>
+          <h5>資料查找，原來 Ruby on Rails 的 Scope 是這樣用的！</h5>
+        </a>
+        <p>By 哲昱・9月 15 2021・技術文章</p>
+      </div>
+    </div>
     <div class="main_morelink">
       <a href="more">更多文章</a>
     </div>
