最後link區域完成及調整檔案

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <title>五倍紅寶石・專業程式教育 | 實戰轉職・企業內訓．人才媒合</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="5xhomework.css">
-  <link rel="stylesheet" href="course.css">
+  <link rel="stylesheet" href="5xhomework02.css">
 </head>
 <body>
   <div class="message">
     <a href="message" target="_blank"><img src="links/00messenge.png" alt="發送訊息"></a>
   </div>
+  
   <div class="header">
     <a href="https://5xruby.tw/" class="logo">
       <div><img src="links/00icon-logo.png" alt="五倍紅寶石"></div>
@@ -41,9 +42,11 @@
       </a>
     </nav>
   </div>
+
   <div class="banner">
     <img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券">
   </div>
+
   <div class="main_tittle">
     <h2 cla>不只停留在教你釣魚，更引領你乘風破浪</h2>
     <div>
@@ -51,6 +54,7 @@
     </div>
     <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
   </div>
+
   <div class="threepoints">
     <div class="threepoints_block">
       <img src="links/02a-learning.png" alt="鍛鍊實力，主導學習">
@@ -68,6 +72,7 @@
       <p>無論新手跨領域轉職，或在職工程師深度進修，<br>讓五倍為你解構學習，突破困境。</p>
     </div>
   </div>
+
   <div class="teacher">
     <div class="teacher_introduce">
       <h2>講師陣容</h2>
@@ -196,6 +201,7 @@
       </div>
     </div>
   </div>
+
   <div class="media">
     <div class="main_tittle">
       <h2>媒體報導</h2>
@@ -232,6 +238,7 @@
       <a href="more">更多報導</a>
     </div>
   </div>
+
   <div class="course">
     <div class="course_short">
       <div class="course_introduce">
@@ -314,6 +321,7 @@
       <a href="more">看更多課程</a>
     </div>
   </div>
+
   <div class="onlinecourse">
     <div class="onlinecourse_intro">
       <h2>掌握自己的學習路徑</h2>
@@ -347,6 +355,7 @@
       </a>
     </div>
   </div>
+
   <div class="recommand">
     <div class="main_tittle">
       <h2>在五倍，我們一起超越五倍</h2>
@@ -421,7 +430,54 @@
       <a href="more">更多文章</a>
     </div>
   </div>
-  <!-- 以下是頁尾 -->
+
+  <div class="link">
+    <div class="link_links">
+      <div class="link_information">
+        <img src="links/008links.svg" alt="5xruby">
+        <p>電話 | (02) 2331-5247<br>信箱 | course@5xcampus.com<br>地址 | 10046 台北市中正區衡陽路 7 號 5 樓</p>
+      </div>
+      <div class="link_web">
+        <div>
+          <h6>專業課程</h6>
+          <a href="links">ASTRO Camp</a>
+          <a href="links">線上課程
+          </a>
+          <a href="links">短期課程</a>
+        </div>
+        <div>
+            <h6>專業課程</h6>
+            <a href="links">ASTRO Camp</a>
+            <a href="links">線上課程
+            </a>
+            <a href="links">短期課程</a>
+        </div>
+        <div>
+            <h6>專業課程</h6>
+            <a href="links">ASTRO Camp</a>
+            <a href="links">線上課程
+            </a>
+            <a href="links">短期課程</a>
+        </div>
+        <div>
+            <h6>專業課程</h6>
+            <a href="links">ASTRO Camp</a>
+            <a href="links">線上課程
+            </a>
+            <a href="links">短期課程</a>
+        </div>
+      </div>
+    </div>
+    <div class="link_icons">
+      <a href="0"><img src="links/008-01.png" alt=""></a>
+      <a href="0"><img src="links/008-02.png" alt=""></a>
+      <a href="0"><img src="links/008-03.png" alt=""></a>
+      <a href="0"><img src="links/008-04.png" alt=""></a>
+      <a href="0"><img src="links/008-05.png" alt=""></a>
+      <a href="0"><img src="links/008-06.png" alt=""></a>
+    </div>
+  </div>
+
   <div class="footer">
     © 2014 - 2021 五倍紅寶石程式資訊教育股份有限公司 (5xRuby Training Group CO., LTD) | 台北市短期補習班立案 第 7594 號
   </div>
