--- a/index.html
+++ b/index.html
@@ -446,25 +446,24 @@
           <a href="links">短期課程</a>
         </div>
         <div>
-            <h6>專業課程</h6>
-            <a href="links">ASTRO Camp</a>
-            <a href="links">線上課程
+            <h6>關於我們</h6>
+            <a href="links">關於五倍紅寶石</a>
+            <a href="links">聯絡我們
             </a>
-            <a href="links">短期課程</a>
+            <a href="links">媒體報導</a>
+            <a href="links">加入我們</a>
         </div>
         <div>
-            <h6>專業課程</h6>
+            <h6>部落格</h6>
             <a href="links">ASTRO Camp</a>
-            <a href="links">線上課程
-            </a>
-            <a href="links">短期課程</a>
+            <a href="links">技術文章</a>
+            <a href="links">五倍消息</a>
         </div>
         <div>
-            <h6>專業課程</h6>
-            <a href="links">ASTRO Camp</a>
-            <a href="links">線上課程
-            </a>
-            <a href="links">短期課程</a>
+            <h6>幫助與政策</h6>
+            <a href="links">常見問題</a>
+            <a href="links">隱私權政策</a>
+            <a href="links">服務條款</a>
         </div>
       </div>
     </div>
