HTML大區塊標籤修改

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="message" target="_blank"><img src="links/00messenge.png" alt="發送訊息"></a>
   </div>
   
-  <div class="header">
+  <header class="header">
     <a href="https://5xruby.tw/" class="logo">
       <div><img src="links/00icon-logo.png" alt="五倍紅寶石"></div>
       <div><p>五倍紅寶石・專業程式教育機構</p></div>
@@ -41,21 +41,21 @@
         <div class="nav_color"></div>
       </a>
     </nav>
-  </div>
+  </header>
 
-  <div class="banner">
+  <section class="banner">
     <img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券">
-  </div>
+  </section>
 
-  <div class="main_tittle">
+  <section class="main_tittle">
     <h2 cla>不只停留在教你釣魚，更引領你乘風破浪</h2>
     <div>
       <div class="main_tittle_color"></div>
     </div>
     <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
-  </div>
+  </section>
 
-  <div class="threepoints">
+  <section class="threepoints">
     <div class="threepoints_block">
       <img src="links/02a-learning.png" alt="鍛鍊實力，主導學習">
       <h3>鍛鍊實力，主導學習</h3>
@@ -71,9 +71,9 @@
       <h3>挑戰困境，突破職涯</h3>
       <p>無論新手跨領域轉職，或在職工程師深度進修，<br>讓五倍為你解構學習，突破困境。</p>
     </div>
-  </div>
+  </section>
 
-  <div class="teacher">
+  <section class="teacher">
     <div class="teacher_introduce">
       <h2>講師陣容</h2>
       <div class="teacher_introduce_color"></div>
@@ -200,9 +200,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="media">
+  <section class="media">
     <div class="main_tittle">
       <h2>媒體報導</h2>
       <div class="main_tittle_color"></div>
@@ -237,9 +237,9 @@
     <div class="main_morelink">
       <a href="more">更多報導</a>
     </div>
-  </div>
+  </section>
 
-  <div class="course">
+  <section class="course">
     <div class="course_short">
       <div class="course_introduce">
         <h4>短期實體課程</h4>
@@ -320,9 +320,9 @@
     <div class="main_morelink">
       <a href="more">看更多課程</a>
     </div>
-  </div>
+  </section>
 
-  <div class="onlinecourse">
+  <section class="onlinecourse">
     <div class="onlinecourse_intro">
       <h2>掌握自己的學習路徑</h2>
       <div class="onlinecourse_intro_color"></div>
@@ -354,9 +354,9 @@
         </div>
       </a>
     </div>
-  </div>
+  </section>
 
-  <div class="recommand">
+  <section class="recommand">
     <div class="main_tittle">
       <h2>在五倍，我們一起超越五倍</h2>
       <div class="main_tittle_color"></div>
@@ -396,9 +396,9 @@
       <div></div>
       <div></div>
     </div>
-  </div>
+  </section>
 
-  <div class="article">
+  <section class="article">
     <div class="main_tittle">
       <h2>精選文章</h2>
       <div class="main_tittle_color"></div>
@@ -429,9 +429,9 @@
     <div class="main_morelink">
       <a href="more">更多文章</a>
     </div>
-  </div>
+  </section>
 
-  <div class="link">
+  <section class="link">
     <div class="link_links">
       <div class="link_information">
         <img src="links/008links.svg" alt="5xruby">
@@ -475,10 +475,10 @@
       <a href="0"><img src="links/008-05.png" alt=""></a>
       <a href="0"><img src="links/008-06.png" alt=""></a>
     </div>
-  </div>
+  </section>
 
-  <div class="footer">
+  <footer class="footer">
     © 2014 - 2021 五倍紅寶石程式資訊教育股份有限公司 (5xRuby Training Group CO., LTD) | 台北市短期補習班立案 第 7594 號
-  </div>
+  </footer>
 </body>
 </html>
