--- a/index.html
+++ b/index.html
@@ -47,35 +47,37 @@
     <img src="links/01Banner.png" alt="使用五倍券5000元送5000元課程折扣券">
   </section>
 
-  <section class="main_tittle">
-    <h2 cla>不只停留在教你釣魚，更引領你乘風破浪</h2>
-    <div>
-      <div class="main_tittle_color"></div>
+  <section class="preface">
+    <div class="main_tittle">
+      <h1>不只停留在教你釣魚，更引領你乘風破浪</h1>
+      <div>
+        <div class="main_tittle_color"></div>
+      </div>
+      <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
     </div>
-    <p>我們不藏私的教學，讓所有人都能發揮超越五倍的價值。</p>
-  </section>
 
-  <section class="threepoints">
-    <div class="threepoints_block">
-      <img src="links/02a-learning.png" alt="鍛鍊實力，主導學習">
-      <h3>鍛鍊實力，主導學習</h3>
-      <p>搭配最新技術版本，掌握業界脈動，<br>與需求緊密結合，鍛鍊程式實力。</p>
-    </div>
-    <div class="threepoints_block">
-      <img src="links/02b-plan-.png" alt="完整規劃，絕不漏接">
-      <h3>完整規劃，絕不漏接</h3>
-      <p>線上補課、線下討論與社群活動，<br>確保學員擁有充份且多元的學習資源和支持系統。</p>
-    </div>
-    <div class="threepoints_block">
-      <img src="links/02c-challenge.png" alt="挑戰困境，突破職涯">
-      <h3>挑戰困境，突破職涯</h3>
-      <p>無論新手跨領域轉職，或在職工程師深度進修，<br>讓五倍為你解構學習，突破困境。</p>
-    </div>
+    <div class="threepoints">
+      <div class="threepoints_block">
+        <img src="links/02a-learning.png" alt="鍛鍊實力，主導學習">
+        <h4>鍛鍊實力，主導學習</h4>
+        <p>搭配最新技術版本，掌握業界脈動，<br>與需求緊密結合，鍛鍊程式實力。</p>
+      </div>
+      <div class="threepoints_block">
+        <img src="links/02b-plan-.png" alt="完整規劃，絕不漏接">
+        <h4>完整規劃，絕不漏接</h4>
+        <p>線上補課、線下討論與社群活動，<br>確保學員擁有充份且多元的學習資源和支持系統。</p>
+      </div>
+      <div class="threepoints_block">
+        <img src="links/02c-challenge.png" alt="挑戰困境，突破職涯">
+        <h4>挑戰困境，突破職涯</h4>
+        <p>無論新手跨領域轉職，或在職工程師深度進修，<br>讓五倍為你解構學習，突破困境。</p>
+      </div>
+    </div> 
   </section>
 
   <section class="teacher">
     <div class="teacher_introduce">
-      <h2>講師陣容</h2>
+      <h1>講師陣容</h1>
       <div class="teacher_introduce_color"></div>
       <p>我們的講師長期專注於網站開發技術領域，透過研討會、社群演講及授課方式將技術知識分享給更多人知道，讓更多人了解各個技術的美好之處。</p>
     </div>
@@ -204,7 +206,7 @@
 
   <section class="media">
     <div class="main_tittle">
-      <h2>媒體報導</h2>
+      <h1>媒體報導</h1>
       <div class="main_tittle_color"></div>
     </div>
     <div class="media_reports">
@@ -242,7 +244,7 @@
   <section class="course">
     <div class="course_short">
       <div class="course_introduce">
-        <h4>短期實體課程</h4>
+        <h1>短期實體課程</h1>
         <div class="course_introduce_color"></div>
         <p>目標清晰的短期課程，針對單一技術所開設。適合在職進修的工程師、PM，或對網頁設計有興趣的你。</p>
       </div>
@@ -263,7 +265,7 @@
       </div>
     </div>
     <div class="course_recently">
-      <h5>近期課程</h5>
+      <h4>近期課程</h4>
       <div class="recentlybg">
         <div></div>
         <div></div>
@@ -324,7 +326,7 @@
 
   <section class="onlinecourse">
     <div class="onlinecourse_intro">
-      <h2>掌握自己的學習路徑</h2>
+      <h1>掌握自己的學習路徑</h1>
       <div class="onlinecourse_intro_color"></div>
       <p>針對不同需求的學員，五倍規劃了多元且完整的學習路徑：從前端到後端，全方面的包套課程，與彈性的線上課程、假日班，任您自由選擇。</p>
     </div>
@@ -335,7 +337,7 @@
     <div class="onlinecourse_options">
       <a href="ooo">
         <img src="links/05A.png" alt="I'm coding it!">
-        <h5>線上課程</h5>
+        <h4>線上課程</h4>
         <div class="onlinecourse_options_decoline"></div>
         <P class="onlinecourse_options_intro">不限時間、地點，自己掌握學習進度。課程內容包含前後端課程，附加完課及提供免費履歷健檢服務。適合在職、喜歡自己掌握進度的人。</P>
         <div class="onlinecourse_options_go">
@@ -345,7 +347,7 @@
       </a>
       <a href="ooo">
         <img src="links/05B.png" alt="Astr0 Camp">
-        <h5>三個月實戰轉職全端工程師</h5>
+        <h4>三個月實戰轉職全端工程師</h4>
         <div class="onlinecourse_options_decoline"></div>
         <P class="onlinecourse_options_intro">除了提供前端到後端課程外，課程期間還包含履歷健檢、模擬面試、專題製作、企業交流等服務。適合有時間決心轉職工程師的素人。</P>
         <div class="onlinecourse_options_go">
@@ -358,7 +360,7 @@
 
   <section class="recommand">
     <div class="main_tittle">
-      <h2>在五倍，我們一起超越五倍</h2>
+      <h1>在五倍，我們一起超越五倍</h1>
       <div class="main_tittle_color"></div>
     </div>
     <div class="recommand_member">
@@ -400,7 +402,7 @@
 
   <section class="article">
     <div class="main_tittle">
-      <h2>精選文章</h2>
+      <h1>精選文章</h1>
       <div class="main_tittle_color"></div>
     </div>
     <div class="article_body">
@@ -439,14 +441,14 @@
       </div>
       <div class="link_web">
         <div>
-          <h6>專業課程</h6>
+          <h5>專業課程</h5>
           <a href="links">ASTRO Camp</a>
           <a href="links">線上課程
           </a>
           <a href="links">短期課程</a>
         </div>
         <div>
-            <h6>關於我們</h6>
+            <h5>關於我們</h5>
             <a href="links">關於五倍紅寶石</a>
             <a href="links">聯絡我們
             </a>
@@ -454,13 +456,13 @@
             <a href="links">加入我們</a>
         </div>
         <div>
-            <h6>部落格</h6>
+            <h5>部落格</h5>
             <a href="links">ASTRO Camp</a>
             <a href="links">技術文章</a>
             <a href="links">五倍消息</a>
         </div>
         <div>
-            <h6>幫助與政策</h6>
+            <h5>幫助與政策</h5>
             <a href="links">常見問題</a>
             <a href="links">隱私權政策</a>
             <a href="links">服務條款</a>
