header_nav的連結動畫

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
       <div><img src="links/00icon-logo.png" alt="五倍紅寶石"></div>
       <div><p>五倍紅寶石・專業程式教育機構</p></div>
     </a>
-    <nav>
+    <nav calss>
       <a href="a" target="_blank">
         <p>ASTRO Camp</p>
-        <div class="nav_color"></div>
+        <span class="nav_line"></span>
       </a>
       <a href="a" target="_blank">
         <p>線上課程</p>
-        <div class="nav_color"></div>
+        <span class="nav_line"></span>
       </a>
       <a href="a" target="_blank">
         <p>短期課程</p>
-        <div class="nav_color"></div>
+        <span class="nav_line"></span>
       </a>
       <a href="a" target="_blank">
         <p>技術文章</p>
-        <div class="nav_color"></div>
+        <span class="nav_line"></span>
       </a>
       <a href="a" target="_blank">
         <p>五倍消息</p>
-        <div class="nav_color"></div>
+        <span class="nav_line"></span>
       </a>
     </nav>
   </header>
