增加底色多邊形

--- a/index.html
+++ b/index.html
@@ -359,9 +359,11 @@
   </section>
 
   <section class="recommand">
-    <div class="main_tittle">
-      <h1>在五倍，我們一起超越五倍</h1>
-      <div class="main_tittle_color"></div>
+    <div class="recommand_title">
+      <div class="main_tittle">
+        <h1>在五倍，我們一起超越五倍</h1>
+        <div class="main_tittle_color"></div>
+      </div>
     </div>
     <div class="recommand_member">
       <div class="recommand_member_item">
@@ -428,8 +430,10 @@
         <p>By 哲昱・9月 15 2021・技術文章</p>
       </div>
     </div>
-    <div class="main_morelink">
-      <a href="more">更多文章</a>
+    <div class="article_morelink">
+      <div class="main_morelink">
+        <a href="more">更多文章</a>
+      </div>
     </div>
   </section>
 
