--- a/index.html
+++ b/index.html
@@ -265,58 +265,61 @@
       </div>
     </div>
     <div class="course_recently">
-      <h4>近期課程</h4>
-      <div class="recentlybg">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="recently">
-        <a href="aaa" class="recently_each">
-          <img src="links/04a-recently.png" alt="" class="recently_each_pic">
-          <p class="recently_each_month">2021 / 11 月班</p>
-          <div class="recently_each_decoline"></div>
-          <div class="recently_each_bottom">
-            <div class="recently_each_teacher">
-              <img src="links/004-icon.png">
-              <p>講師：許國政 (Kuro Hsu)</p>
+      <div>
+        <h4>近期課程</h4>
+      <div class="course_recently_wrap"> 
+        <div class="recentlybg">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="recently">
+          <a href="aaa" class="recently_each">
+            <img src="links/04a-recently.png" alt="" class="recently_each_pic">
+            <p class="recently_each_month">2021 / 11 月班</p>
+            <div class="recently_each_decoline"></div>
+            <div class="recently_each_bottom">
+              <div class="recently_each_teacher">
+                <img src="links/004-icon.png">
+                <p>講師：許國政 (Kuro Hsu)</p>
+              </div>
+              <div class="recently_each_level">
+                <img src="links/004-icon2.png">
+                <p>進階課程</p>
+              </div>
             </div>
-            <div class="recently_each_level">
-              <img src="links/004-icon2.png">
-              <p>進階課程</p>
+          </a>
+          <a href="aaa" class="recently_each">
+            <img src="links/04b-recently.png" alt="" class="recently_each_pic">
+            <p class="recently_each_month">2021 / 12 月</p>
+            <div class="recently_each_decoline"></div>
+            <div class="recently_each_bottom">
+              <div class="recently_each_teacher">
+                <img src="links/004-icon.png">
+                <p>講師：廖珀均 (奶綠茶)</p>
+              </div>
+              <div class="recently_each_level">
+                <img src="links/004-icon2.png">
+                <p>進階課程</p>
+              </div>
             </div>
-          </div>
-        </a>
-        <a href="aaa" class="recently_each">
-          <img src="links/04b-recently.png" alt="" class="recently_each_pic">
-          <p class="recently_each_month">2021 / 12 月</p>
-          <div class="recently_each_decoline"></div>
-          <div class="recently_each_bottom">
-            <div class="recently_each_teacher">
-              <img src="links/004-icon.png">
-              <p>講師：廖珀均 (奶綠茶)</p>
+          </a>
+          <a href="aaa" class="recently_each">
+            <img src="links/04c-recently.png" alt="" class="recently_each_pic">
+            <p class="recently_each_month">2022 / 2 月班</p>
+            <div class="recently_each_decoline"></div>
+            <div class="recently_each_bottom">
+              <div class="recently_each_teacher">
+                <img src="links/004-icon.png">
+                <p>李建杭 (Amos Lee)</p>
+              </div>
+              <div class="recently_each_level">
+                <img src="links/004-icon3.png">
+                <p class="recently_each_last">入門課程</p>
+              </div>
             </div>
-            <div class="recently_each_level">
-              <img src="links/004-icon2.png">
-              <p>進階課程</p>
-            </div>
-          </div>
-        </a>
-        <a href="aaa" class="recently_each">
-          <img src="links/04c-recently.png" alt="" class="recently_each_pic">
-          <p class="recently_each_month">2022 / 2 月班</p>
-          <div class="recently_each_decoline"></div>
-          <div class="recently_each_bottom">
-            <div class="recently_each_teacher">
-              <img src="links/004-icon.png">
-              <p>李建杭 (Amos Lee)</p>
-            </div>
-            <div class="recently_each_level">
-              <img src="links/004-icon3.png">
-              <p class="recently_each_last">入門課程</p>
-            </div>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
     </div>
     <div class="main_morelink">
